2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: fix in javascript function
	"setFieldsFormLayer" set the checkbox.

2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in fuction "getAgentsLayer" fix when none data
	for agents in this layer.
	
	* operation/gis_maps/render_view.php: fix link to edit map and fix the text
	of header.
	
	operation/gis_maps/index.php: use function "print_page_header".

2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: now function "getAgentMap" return true or false
	if there is default map or not.

	* operation/agentes/gis_view.php, godmode/agentes/agent_conf_gis.php: show
	message of error when there isn't a default map

2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: update with the new data in
	the sql data file of pandora.
	
	include/config_process.php: update the version.

2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: erase console log in some parts
	in javascript, and fix the fill a hidden input with the levels of zoom in
	a connection.

2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: add the default map from Open street map, and set
	active by default the GIS.
	
	* godmode/setup/gis_step_2.php: fix tiny bugs in the form that the default
	values for zooms were exchangeds.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: use zoom level.
	
	* godmode/gis_maps/configure_gis_map.php: include the things about
	default zoom level in function "validateMapData", "getMapData" and add
	the function "getNumZoomLevelsOfConnectionDefault".

2010-02-25  Sancho Lerena  <slerena@artica.es>

	* godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,